<resources>
    <string name="app_name">Movie Booking App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_Coming_soon">Coming Soon</string>
    <string name="lbl_Now_Showing">Now Showing</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_sign_in_with_facebook">Sign in With Facebook</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_sign_in_with_google">Sign in With Google</string>
    <string name="lbl_title_cast">Cast</string>
    <string name="lbl_plot_summary_header">Plot Summary</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_get_it_now">Get it now</string>
    <string name="lbl_no_promo_code">Don\'t have any promo code ?</string>
    <string name="lbl_enter_promo_code">Enter promo code</string>
    <string name="lbl_add_new_card">Add New Card</string>
    <string name="lbl_card_holder_name">Card Holder Name</string>
    <string name="lbl_exp_date">Exp Date</string>
    <string name="lbl_ccv">CCV</string>
    <string name="lbl_header_awesome">Awesome!</string>
    <string name="lbl_this_is_your_ticket">This is your ticket</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_showtime_date">ShowTime - Date</string>
    <string name="lbl_theatre">Theatre</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_seat">Seat</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_Sign_up">Sign Up</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_minus">-</string>
    <string name="lbl_plus">+</string>
    <string name="lbl_Welcome">Welcome !</string>
    <string name="lbl_welcome_to_app">Hello! Welcome to Galaxy App</string>
    <string name="lbl_get_your_ticket">Get Your Ticket</string>
    <string name="lbl_payment_amount">Payment Amount</string>
    <string name="lbl_welcome_back">Welcome back, Login To Continue</string>
    <string name="lbl_forget_password">Forget Password ?</string>
    <string name="lbl_card_holder">Card Holder</string>
    <string name="lbl_ticket">Ticket</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_terms_of_services">Terms of Services</string>
    <string name="lbl_select_language">Select Language</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_available_seat">Available</string>
    <string name="lbl_reserved_Seat">Reserved</string>
    <string name="lbl_your_selection_seat">Your Selection</string>
    <string name="lbl_buy_ticket">Buy Ticket</string>
    <string name="lbl_edit">Edit</string>
    <string name="warning_please_add_a_card">Please Add A Card To Continue</string>
    <string name="server_client_id">1090482583899-9s5g87tfoqmmrarvit433pcaesu7vv6g.apps.googleusercontent.com</string>
</resources>