<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/margin_medium_2"
    tools:context=".activities.SnackActivity">
    // Floating Pay Button

    <TextView
        android:id="@+id/tvPaySnack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="@dimen/margin_medium_2"
        android:background="@drawable/background_confirm_btn"
        android:elevation="@dimen/margin_card_medium"
        android:gravity="center|bottom"
        android:paddingTop="@dimen/margin_card_medium_2"
        android:paddingBottom="@dimen/margin_card_medium_2"
        android:shadowColor="@color/colorAccent"
        android:text="Pay $40.00"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_3x"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            //BackBtn

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBtnBackSnack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_black_24dp" />
            //Recycler For Snack list

            <androidx.recyclerview.widget.RecyclerView
                android:elevation="@dimen/margin_card_medium"
                android:id="@+id/rvSnackList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivBtnBackSnack"
                android:layout_marginTop="@dimen/margin_medium_2" />
            // Promo Code

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPromoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvSnackList"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:backgroundTint="@color/colorSecondaryText"
                android:hint="@string/lbl_enter_promo_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNoPromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPromoCode"
                android:text="@string/lbl_no_promo_code"
                android:textColor="@color/colorSecondaryText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPromoCode"
                android:layout_toEndOf="@+id/tvNoPromoCode"
                android:text="@string/lbl_get_it_now" />
            //Total cost

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNoPromoCode"
                android:layout_marginTop="@dimen/margin_large"
                tools:text="Sub total: 40$"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
            //payment Method

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPaymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSubTotal"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_payment_method"
                android:textSize="@dimen/margin_medium_3"
                android:textStyle="bold" />
            //RV For Payment Method

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPaymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPaymentMethod"
                android:layout_marginTop="@dimen/margin_medium_2" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>